# INTUIT-BOOM

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  GUIA_CANONICO_INTUIT_QBO.md  INTUIT_BOOM_FULL_CONTEXT_2026-01-23.md  LAYERS.md  PLAYBOOK_COCKPIT.xlsx  PLAYBOOK_QBO_POST_DEAL.md  PROMPT_CLAUDE_QBO_MASTER.md  PROMPT_NV2_FEATURE_CHECKER.md  PROMPT_TCO_FEATURE_CHECKER.md  RACCOONS_Alinhamentos_Sync.pptx  RACCOONS_Recursos_Links.pptx  WFS_PROJECT_PLAN_COMPLETE.xlsx  add_linear_comment.py  analyze_all_screenshots.py  audit_tco_atlanta.py  build_playbook_cockpit.py  build_testbox_xlsx.py  cockpit_tco.py  create_consolidated_view_ticket.py  create_linear_ticket.py  create_master_validation.py  create_post_launch_gantt_v9_FINAL.py  create_raccoons_ppts.py  create_raccoons_ppts_v2.py  create_tracker_updated.py  create_unified_tracker_final.py  create_validation_matrix_v3.py  create_validation_matrix_v4.py  create_wfs_excel.py  create_winter_release_check_plan_v3.py  drive_links.json  feature_validation_consolidated.py  layer1_login.py  navigate_dimensions.py  nv2_health_check.py  post_bug21_update.py  post_bug22_update.py  (+11 more)
tools/feature-checker/: .env.example  LICENSE  README.md  pyproject.toml  requirements.txt
tools/feature-checker/config/checks/: qbo-np.json  qbo.json
tools/feature-checker/config/products/: qbo.json
tools/feature-checker/docs/: adding-checks.md  getting-started.md
tools/feature-checker/src/feature_checker/: __init__.py  cli.py
tools/feature-checker/src/feature_checker/auth/: __init__.py  login.py  totp.py
tools/feature-checker/src/feature_checker/core/: __init__.py  browser.py  checker.py  content_scanner.py  reporter.py
(+301 files in other folders)
